--- a/index.html
+++ b/index.html
@@ -64,53 +64,53 @@
                 <div class="collection-grid">
                     <div class="collection-row">
                         <div class="collection-item">
-                            <img src="imgs/basilik.jpg" alt="Elegant Rings">
+                            <img src="imgs/basilik.jpg" alt="Designer Rings">
                             <div class="collection-info">
-                                <!-- <h3>Elegant Rings</h3>
-                                <p>Timeless designs for every occasion</p>
-                                <a href="#" class="view-collection">View Collection</a> -->
+                                <h3>Designer Rings</h3>
+                                <p>Exclusive designs with natural stones</p>
+                                <a href="#" class="view-collection">View Collection</a>
                             </div>
                         </div>
                         <div class="collection-item">
-                            <img src="imgs/blue_gold_necklace.jpg" alt="Statement Necklaces" >
+                            <img src="imgs/blue_gold_necklace.jpg" alt="Gold Necklaces">
                             <div class="collection-info">
-                                <!-- <h3>Statement Necklaces</h3>
-                                <p>Bold pieces that capture attention</p>
-                                <a href="#" class="view-collection">View Collection</a> -->
+                                <h3>Gold Necklaces</h3>
+                                <p>Elegant blue and gold statement pieces</p>
+                                <a href="#" class="view-collection">View Collection</a>
                             </div>
                         </div>
                         <div class="collection-item">
-                            <img src="imgs/bracelet.jpg" alt="Luxury Watches">
+                            <img src="imgs/bracelet.jpg" alt="Custom Bracelets">
                             <div class="collection-info">
-                                <!-- <h3>Luxury Watches</h3>
-                                <p>Precision craftsmanship for the discerning</p>
-                                <a href="#" class="view-collection">View Collection</a> -->
+                                <h3>Custom Bracelets</h3>
+                                <p>Handcrafted charm bracelets</p>
+                                <a href="#" class="view-collection">View Collection</a>
                             </div>
                         </div>
                     </div>
                     <div class="collection-row">
                         <div class="collection-item">
-                            <img src="imgs/gold-earrings.jpg" alt="Diamond Earrings">
+                            <img src="imgs/gold-earrings.jpg" alt="Gold Earrings">
                             <div class="collection-info">
-                                <!-- <h3>Diamond Earrings</h3>
-                                <p>Sparkling elegance for everyday wear</p>
-                                <a href="#" class="view-collection">View Collection</a> -->
+                                <h3>Gold Earrings</h3>
+                                <p>Classic designs for everyday elegance</p>
+                                <a href="#" class="view-collection">View Collection</a>
                             </div>
                         </div>
                         <div class="collection-item">
-                            <img src="imgs/moon_and_stars.jpg" alt="Bridal Sets">
+                            <img src="imgs/moon_and_stars.jpg" alt="Celestial Collection">
                             <div class="collection-info">
-                                <!-- <h3>Bridal Sets</h3>
-                                <p>Celebrate your special day with perfection</p>
-                                <a href="#" class="view-collection">View Collection</a> -->
+                                <h3>Celestial Collection</h3>
+                                <p>Moon and stars themed jewelry</p>
+                                <a href="#" class="view-collection">View Collection</a>
                             </div>
                         </div>
                         <div class="collection-item">
-                            <img src="imgs/starlit_ring.jpg" alt="Vintage Pieces">
+                            <img src="imgs/starlit_ring.jpg" alt="Starlit Rings">
                             <div class="collection-info">
-                                <!-- <h3>Vintage Pieces</h3>
-                                <p>Sparkling elegance for everyday wear</p>
-                                <a href="#" class="view-collection">View Collection</a> -->
+                                <h3>Starlit Rings</h3>
+                                <p>Glittering stones in signature settings</p>
+                                <a href="#" class="view-collection">View Collection</a>
                             </div>
                         </div>
                     </div>
