first 7 sections done

--- a/index.html
+++ b/index.html
@@ -117,5 +117,113 @@
                 </div>
             </div>
         </div>
+        <div class="offers">
+            <h1>What We Offer</h1>
+            <div class="offers-content">
+                <p class="offers-paragraph">Experience our comprehensive range of jewelry services designed to meet all your needs. From bespoke designs to expert repairs, we provide unparalleled quality and attention to detail in everything we offer.</p>
+            </div>
+            <div class="offers-container">
+                <div class="offers-row">
+                    <div class="offers-highlights">
+                        <i class="fas fa-magic highlight-icons"></i>
+                        <h2>Custom Creation</h2>
+                        <p>Work with our designers to bring your dream jewelry to life with our bespoke service.</p>
+                        <a href="#" class="learn-more">Learn More</a>
+                    </div>
+                    <div class="offers-highlights">
+                        <i class="fas fa-tools highlight-icons"></i>
+                        <h2>Repair Services</h2>
+                        <p>Professional restoration and repair to keep your precious pieces looking their best.</p>
+                        <a href="#" class="learn-more">Learn More</a>
+                    </div>
+                    <div class="offers-highlights">
+                        <i class="fas fa-ring highlight-icons"></i>
+                        <h2>Resizing</h2>
+                        <p>Expert ring resizing service ensuring perfect fit and comfort for your jewelry.</p>
+                        <a href="#" class="learn-more">Learn More</a>
+                    </div>
+                </div>
+                <div class="offers-row">
+                    <div class="offers-highlights">
+                        <i class="fas fa-spa highlight-icons"></i>
+                        <h2>Cleaning & Polishing</h2>
+                        <p>Professional cleaning and polishing to restore the original sparkle to your jewelry.</p>
+                        <a href="#" class="learn-more">Learn More</a>
+                    </div>
+                    <div class="offers-highlights">
+                        <i class="fas fa-gem highlight-icons"></i>
+                        <h2>Gemstone Replacement</h2>
+                        <p>Replace lost or damaged stones with premium quality gemstones perfectly matched.</p>
+                        <a href="#" class="learn-more">Learn More</a>
+                    </div>
+                    <div class="offers-highlights">
+                        <i class="fas fa-award highlight-icons"></i>
+                        <h2>Appraisal Services</h2>
+                        <p>Professional jewelry appraisal for insurance, estate planning, or resale purposes.</p>
+                        <a href="#" class="learn-more">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="why-choose-us">
+            <div class="why-choose-container">
+                <div class="why-choose-text">
+                    <h1>Why Choose Us</h1>
+                    <h3>The Preferred Destination for Exquisite Jewelry</h3>
+                    <p class="why-choose-paragraph">We combine exceptional quality, personalized service, and ethical sourcing to deliver jewelry that exceeds expectations.</p>
+                    <ul class="why-choose-list">
+                        <li><i class="fas fa-check check_icon"></i> <strong>Exceptional Quality</strong> - Rigorous standards ensuring lifelong beauty</li>
+                        <li><i class="fas fa-check check_icon"></i> <strong>Personalized Service</strong> - Expert guidance tailored to your style</li>
+                        <li><i class="fas fa-check check_icon"></i> <strong>Ethical Sourcing</strong> - Responsibly obtained materials</li>
+                        <li><i class="fas fa-check check_icon"></i> <strong>Customer Satisfaction</strong> - Guaranteed happiness with excellent aftercare</li>
+                    </ul>
+                </div>
+                <div class="why-choose-image">
+                    <img src="imgs/craftmanship.webp" alt="Jewelry Craftsmanship">
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-section">
+                    <h3>Elegant Jewelry</h3>
+                    <p>Crafting timeless elegance since 2010. Our commitment to quality and craftsmanship stands behind every piece we create.</p>
+                </div>
+                <div class="footer-section">
+                    <div class="social-media">
+                        <h3>Follow Us</h3>
+                        <div class="social-icons">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-pinterest"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-section">
+                    <h3>Customer Service</h3>
+                    <ul>
+                        <li><a href="#">Shipping & Returns</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Jewelry Care</a></li>
+                        <li><a href="#">Size Guide</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Payment Methods</h3>
+                    <div class="payment-icons">
+                        <i class="fab fa-cc-visa"></i>
+                        <i class="fab fa-cc-mastercard"></i>
+                        <i class="fab fa-cc-amex"></i>
+                        <i class="fab fa-cc-paypal"></i>
+                        <i class="fab fa-cc-discover"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2023 Elegant Jewelry. All Rights Reserved.</p>
+            </div>
+        </footer>
     </body>
 </html>
