--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                 </div>
             </div>
         </div>
+        <hr class="decorative-divider">
         <div class="why-choose-us">
             <div class="why-choose-container">
                 <div class="why-choose-text">
